configuration/pv-pvc-cm-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: default
spec:
  rules:
  - host: online-judge.io
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 80
        path: /api
        pathType: Prefix
  - host: online-judge.io
    http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
